--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,17 @@
   <body>
     <h1>My chat app</h1>
     <p>welcome world!</p>
+    <iframe width="1280" height="720" src="https://www.ocurus.com/tour/MjE5Mw==" frameborder="0" allowfullscreen scrolling="no"></iframe>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+
+      socket.on('connect',()=>{
+        console.log("connected to server");
+      });
+      socket.on('disconnect',()=>{
+        console.log("Disconnected from sever");
+      });
+    </script>
   </body>
 </html>
