--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,6 @@
     <h1>My chat app</h1>
     <p>welcome world!</p>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-
-      socket.on('connect',()=>{
-        console.log("connected to server");
-      });
-      socket.on('disconnect',()=>{
-        console.log("Disconnected from sever");
-      });
-    </script>
+    <script src ="/js/index.js"></script>
   </body>
 </html>
