--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,33 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/styles.css">
     <title></title>
   </head>
-  <body>
-    <h1>My chat app</h1>
-    <p>welcome world!</p>
-    <ol id="messages">
+  <body class = "chat">
 
-    </ol>
-    <form id="message-form">
-      <input type="text" name="message" placeholder="Message"/>
-      <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+
+    <div class="chat__sidebar">
+      <h3>People</h3>
+      <div id="users">
+
+      </div>
+      </div>
+      <div class="chat__main">
+        <ol id="messages" class="chat__messages"></ol>
+
+        <div class="chat__footer">
+          <form id="message-form">
+            <input type="text" name="message" placeholder="Message" autofocus autocomplete="off"/>
+            <button>Send</button>
+          </form>
+          <button id="send-location">Send Location</button>
+        </div>
+
+      </div>
+
+
+
     <script src="/socket.io/socket.io.js"></script>
     <script src = "/js/libs/jquery-3.3.1.min.js"></script>
     <script src ="/js/index.js"></script>
