--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
         <div class="form-field">
           <label for="">Room Name</label>
-          <input type="text" name="Room">
+          <input type="text" name="room">
         </div>
 
         <div class="form-field">
